fixed link hover states, edited popup assets to be high res, added code to fix the search bar on the search results oage, reduced the size of the powered by logo, fixed the overlapping of the  footer of some pages, fixed the underlining on the autocomplete under the search bar

--- a/app/assets/stylesheets/pages/pages.scss
+++ b/app/assets/stylesheets/pages/pages.scss
@@ -53,6 +53,9 @@ h4 {
   margin-right: 0;
   margin-left: 0;
   padding: 60px;
+  margin-bottom: -20px;
+  position: relative;
+  z-index: 666;
   
   strong {
     font-weight: 600;
