--- a/app/assets/stylesheets/species/all.css
+++ b/app/assets/stylesheets/species/all.css
@@ -122,11 +122,10 @@ form, fieldset {
 	padding-bottom: 0;
 }
 
-#nav > li.add a:hover {
-	border: none;
-}
-
 #nav > li.add > a { text-decoration: none; }
+#nav > li.add > a:hover { 
+  border-bottom: none;; 
+  }
 #nav > li:hover > ul { display: block; }
 #nav > li > ul {
 	display: none;
@@ -139,7 +138,7 @@ form, fieldset {
 	background: #f5f5f7;
 	-webkit-border-radius: 7px;
 	border-radius: 7px;
-	border: #ddd solid 1px;
+	border: 1px solid #8fb7cf;
 }
 #nav > li > ul:after {
 	content: "";
@@ -150,6 +149,7 @@ form, fieldset {
 	height: 10px;
 	z-index: 1;
 	background: url(/assets/species/arrow.png) no-repeat;
+	background-size: 100%;
 }
 #nav > li > ul > li {
 	float: left;
@@ -160,14 +160,15 @@ form, fieldset {
 #nav > li > ul > li > a {
 	float: left;
 	text-decoration: none;
-	border-bottom: 1px dotted #999;
+	border-bottom: 1px dotted #2D3237;
+	color: #2D3237;
 }
 
 #nav > li > ul > li > a:hover {
 	float: left;
 	text-decoration: none;
-	color: #2D3237;
-	border-bottom: 1px dotted #2D3237;
+	color: #7CA8C6;
+	border-bottom: 1px dotted #7CA8C6;
 	-webkit-transition: all 0.5s ease;
 	-moz-transition: all 0.5s ease;
 	-ms-transition: all 0.5s ease;
@@ -212,8 +213,13 @@ a.learn-more {
 }
 a.learn-more:hover {
   text-decoration: none;
-  border-bottom: 1px dotted #2D3237;
-  color: #2D3237;
+  border-bottom: 1px dotted #7CA8C6;
+  color: #7CA8C6;
+  -webkit-transition: all 0.5s ease;
+	-moz-transition: all 0.5s ease;
+	-ms-transition: all 0.5s ease;
+	-o-transition: all 0.5s ease;
+	transition: all 0.5s ease;
 }
 
 #footer {
@@ -239,7 +245,6 @@ a.learn-more:hover {
 }
 #footer .sponsor {
 	float: left;
-	padding: 20px 0 0 0;
 }
 #footer .sponsor li {
 	float: left;
@@ -830,6 +835,11 @@ body.inner #footer .holder{
 #main .tabset > li > ul >li.active > a, #main .tabset > li > ul >li > a:hover {
 	color: #2a425a;
 	text-decoration: none;
+	-webkit-transition: all 0.5s ease;
+	-moz-transition: all 0.5s ease;
+	-ms-transition: all 0.5s ease;
+	-o-transition: all 0.5s ease;
+	transition: all 0.5s ease;
 }
 #main .tabset > li > ul > li.has-dropdown:hover > a {
 	padding: 0 0 1px;
@@ -877,10 +887,6 @@ body.inner #footer .holder{
 
 #main .block.show_more {
 	border-bottom: 1px solid #ddd;
-}
-
-#main .block.show_more#cites_quotas {
-	border-top: 1px solid #ddd;
 }
 
 #main .block.show_more:hover, #main .block.show_more.active {
@@ -962,6 +968,7 @@ body.inner #footer .holder{
 #main #cms_instruments.block th.col3{ width: 418px; }
 
 #main .block a { color: #666; }
+#main .block a:hover { color: #7CA8C6; }
 #main .block td {
 	border-top: 1px solid #DFE1E2;
 	padding: 12px 0;
@@ -1271,6 +1278,7 @@ body.inner #footer .holder{
   width:100%;
   height:100%;
   z-index: 999;
+  position: fixed;
 }
 
 .spinner img {
